# distracted-driver-detection

./: .gitignore  README.md  index.html  pyproject.toml
css/: main.css  proposal.css
final_report/: index.html
proposal/: index.html  style.css
src/: datasets.py  driving_classifier_live.py  generate_frames_from_mp4.py  optical_flow_analysis.py  optical_flow_live.py  results.py  train.py  train_resnet.py
