[project]
name = "distracted-driver-detection"
version = "0.1.0"
description = "Distracted driver detection using deep learning"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
]